--- a/TranslitRu.csproj
+++ b/TranslitRu.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -47,6 +48,7 @@
   <ItemGroup>
     <Compile Include="BaseTrasLitConverter.cs" />
     <Compile Include="FileBasedConverter.cs" />
+    <Compile Include="HTMLConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rus2Lat.cs" />
     <Compile Include="TransLitRuConverter.cs" />
